# capture

./: AlCommon.h  CMakeLists.txt  Makefile  avilib.c  avilib.h  camera_h264  h264encoder.c  h264encoder.h  luo.avi  main.c  utils.h  video_capture.c  video_capture.h  video_process.c  video_process.h  video_writer.c  video_writer.h
